Prevent objects to be hidden behind footer in users-view. Changed the tab title

--- a/frontend/src/app/components/users.component.scss
+++ b/frontend/src/app/components/users.component.scss
@@ -1,3 +1,5 @@
+@import '../../variables';
+
 h2 {
   padding-bottom: 20px;
 
@@ -21,3 +23,6 @@ h2 {
   font-weight: bold;
 }
 
+.container {
+  margin-bottom: $footer-height;
+}
